data/derived/fa15/progs/unify/prog3528.ml.out
Characters 188-189:
  | (x, n) when n mod 5 = 0 -> buildSine(build(x, n - 1))
                                               ^
Error: This expression has type int but an expression was expected of type
         int * int -> int
